feat: add on dark support for dropdown

--- a/components/dropdown/apiExamples/onDark.html
+++ b/components/dropdown/apiExamples/onDark.html
@@ -1,9 +1,4 @@
-<auro-dropdown
-  aria-label="custom label"
-  inset
-  error
-  rounded
-  bordered>
+<auro-dropdown onDark aria-label="custom label">
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
