--- a/components/dropdown/apiExamples/disabled.html
+++ b/components/dropdown/apiExamples/disabled.html
@@ -1,6 +1,18 @@
-<auro-dropdown aria-label="custom label" disabled>
+<auro-dropdown
+  aria-label="custom label"
+  disabled
+  chevron
+  rounded
+  inset
+  bordered>
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
   </div>
+  <span slot="helpText">
+    Helper text
+  </span>
+  <span slot="label">
+    Name
+  </span>
 </auro-dropdown>
