--- a/components/dropdown/apiExamples/error.html
+++ b/components/dropdown/apiExamples/error.html
@@ -1,5 +1,17 @@
-<auro-dropdown aria-label="custom label" error>
-  Lorem ipsum solar
+<auro-dropdown common error id="commonSlotError">
+  <div style="padding: var(--ds-size-150);">
+    Lorem ipsum solar
+    <br />
+    <auro-button onclick="document.querySelector('#commonSlotError').hide()">
+      Dismiss Dropdown
+    </auro-button>
+  </div>
+  <span slot="helpText">
+    Help text
+  </span>
+  <span slot="label">
+    Element label (default text will be read by screen reader)
+  </span>
   <div slot="trigger">
     Trigger
   </div>
