--- a/components/dropdown/apiExamples/onDarkCommon.html
+++ b/components/dropdown/apiExamples/onDarkCommon.html
@@ -1,16 +1,13 @@
-<auro-dropdown id="commonSlot" common>
+<auro-dropdown onDark common id="commonOnDark" aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#commonSlot').hide()">
+    <auro-button onclick="document.querySelector('#commonOnDark').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
   <span slot="helpText">
     Help text
-  </span>
-  <span slot="label">
-    Element label (default text will be read by screen reader)
   </span>
   <div slot="trigger">
     Trigger
