--- a/components/dropdown/apiExamples/onDarkCommonSlot.html
+++ b/components/dropdown/apiExamples/onDarkCommonSlot.html
@@ -1,8 +1,8 @@
-<auro-dropdown id="commonSlot" common>
+<auro-dropdown onDark common id="commonSlotOnDark">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#commonSlot').hide()">
+    <auro-button onclick="document.querySelector('#commonSlotOnDark').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
