--- a/components/select/src/styles/color.scss
+++ b/components/select/src/styles/color.scss
@@ -4,29 +4,14 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 /* stylelint-disable max-nesting-depth, selector-class-pattern */
-
-:host {
-  [auro-dropdown] {
-    &::part(trigger) {
-      &:hover {
-        --ds-auro-dropdown-trigger-container-color: rgba(0 0 0 / 0.06); // Needs container token
-      }
-    }
-  }
-}
-
-:host([disabled]) {
-  * {
-    color: var(--ds-color-text-ui-disabled-default, $ds-color-text-ui-disabled-default);
-  }
-}
 
 .placeholder {
   color: var(--ds-auro-select-placeholder-text-color);
