--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -4,7 +4,8 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/core';
