--- a/components/select/src/styles/tokens.scss
+++ b/components/select/src/styles/tokens.scss
@@ -1,5 +1,5 @@
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
 
 :host {
-  --ds-auro-select-placeholder-text-color: var(--ds-color-text-secondary-default, $ds-color-text-secondary-default);
+  --ds-auro-select-placeholder-text-color: var(--ds-basic-color-texticon-default, $ds-basic-color-texticon-default);
 }
