feat: add on dark support for select
BREAKING CHANGE: All theme tokens now are inherited from dropdown.

--- a/components/select/apiExamples/onDarkError.html
+++ b/components/select/apiExamples/onDarkError.html
@@ -1,10 +1,7 @@
-<auro-button id="undefinedValueExampleBtnAddError">Set Error</auro-button>
-<auro-button id="undefinedValueExampleBtnRemoveError">Remove Error</auro-button>
-<br /><br />
-<auro-select id="errorExample" error="Custom error message">
+<auro-select onDark error="Custom error message">
+  <span slot="label">error select example</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
-  <span slot="label">error Select Example</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
