--- a/components/datepicker/src/styles/color-calendar.scss
+++ b/components/datepicker/src/styles/color-calendar.scss
@@ -3,7 +3,9 @@
 
 // // ---------------------------------------------------------------------
 
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 .calendarNavBtn {
@@ -11,13 +13,17 @@
   background-color: var(--ds-auro-calendar-nav-btn-container-color);
   color: var(--ds-auro-calendar-nav-btn-chevron-color);
 
-  &:hover,
+  &:hover {
+    --ds-auro-calendar-nav-btn-container-color: var(--ds-advanced-color-state-background-hover, #{$ds-advanced-color-state-background-hover});
+    --ds-auro-calendar-nav-btn-border-color: var(--ds-basic-color-brand-primary, #{$ds-basic-color-brand-primary});
+  }
+
   &:focus {
-    --ds-auro-calendar-nav-btn-border-color: var(--ds-color-border-ui-default-default, #{$ds-color-border-ui-default-default});
+    --ds-auro-calendar-nav-btn-border-color: var(--ds-basic-color-brand-primary, #{$ds-basic-color-brand-primary});
   }
 
   &:active {
-    --ds-auro-calendar-nav-btn-border-color: var(--ds-color-border-ui-default-default, #{$ds-color-border-ui-default-default});
+    --ds-auro-calendar-nav-btn-border-color: var(--ds-basic-color-brand-primary, #{$ds-basic-color-brand-primary});
     
     box-shadow: inset 0 0 0 1px var(--ds-auro-calendar-nav-btn-border-color);
   }
@@ -39,8 +45,12 @@
   }
 }
 
+::slotted([slot="bib.fullscreen.fromStr"]), ::slotted([slot="mobileDateToStr"]) {
+  color: var(--ds-auro-datepicker-placeholder-color);
+}
+
 @include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
   .calendarNavBtn {
-    --ds-auro-calendar-nav-btn-border-color: var(--ds-color-border-ui-default-default, #{$ds-color-border-ui-default-default});
+    --ds-auro-calendar-nav-btn-border-color: var(--ds-basic-color-brand-primary, #{$ds-basic-color-brand-primary});
   }
 }
