feat: add on dark support for datepicker

--- a/components/datepicker/src/styles/color.scss
+++ b/components/datepicker/src/styles/color.scss
@@ -25,3 +25,7 @@
     }
   }
 }
+
+:host([onDark]) {
+  --ds-auro-datepicker-range-input-divider-color: var(--ds-basic-color-border-inverse, #{$ds-basic-color-border-inverse});
+}
