--- a/components/form/src/styles/style.scss
+++ b/components/form/src/styles/style.scss
@@ -4,34 +4,11 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariableMap';
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@import '@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariableMap';
 
 // general WCSS imports
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 @import '@aurodesignsystem/webcorestylesheets/src/animation';
 
-// Support for auroElement styles
-// @import './node_modules/@aurodesignsystem/webcorestylesheets/dist/auroElement/auroElement';
-
-// container styles - defines the look of the outer custom component
-// :host {
-//   ...
-// }
-
-
-// Selector is for initial setup only
-// delete when building new custom element
-.testClass {
-  display: inline-block;
-  padding: var(--auro-text-body-size-default);
-  border: 1px solid var(--auro-color-border-error-on-light);
-  color:  var(--auro-color-border-error-on-light);
-}
-
-// Selector for native :focus-visible support
-:focus-visible {
-  background-color: var(--auro-color-border-error-on-light);
-  color: var(--auro-color-base-white);
-}
