--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -26,11 +26,13 @@
   }
 
   &::part(wrapper) {
-    /* stylelint-disable declaration-no-important */
-    border-width: 0 !important;
-    box-shadow: unset !important;
-    outline: unset !important;
-    /* stylelint-enable declaration-no-important */
+    &:focus-within {
+      /* stylelint-disable declaration-no-important */
+      border-bottom-width: 0 !important;
+      box-shadow: unset !important;
+      outline: unset !important;
+      /* stylelint-enable declaration-no-important */
+    }
 
     --ds-auro-input-border-color: transparent;
     --ds-auro-input-container-color: transparent;
