fix: update improper fallback reference

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -42,7 +42,7 @@
   cursor: pointer;
 
   [auro-icon] {
-    --ds-auro-icon-size: var(--ds-size-500, $ds-size-500);
+    --ds-auro-icon-size: var(--ds-size-500, #{$ds-size-500});
   }
 }
 
