--- a/components/menu/src/styles/style-menuoption.scss
+++ b/components/menu/src/styles/style-menuoption.scss
@@ -33,7 +33,7 @@
   }
 
   [auro-icon] {
-    --ds-auro-icon-size: var(--ds-size-300, $ds-size-300);
+    --ds-auro-icon-size: var(--ds-size-300, #{$ds-size-300});
     margin-right: var(--ds-size-150, $ds-size-150);
     margin-left: var(--ds-size-100, $ds-size-100);
   }
