docs(radio): update nested example values

--- a/components/radio/apiExamples/accordionExample.html
+++ b/components/radio/apiExamples/accordionExample.html
@@ -1,13 +1,11 @@
 <auro-radio-group>
   <span slot="legend">Accordion Test</span>
-  <auro-radio id="basicGroupRadio1" label="Credit or debit card" name="creditordebit" value="yes"></auro-radio>
-  <auro-radio id="basicGroupRadio2" label="Apple Pay" name="applePay" value="no"></auro-radio>
-  <auro-radio id="basicGroupRadio3" label="Alaska Airlines Commercial Account" name="alaskaCommercial" value="no"></auro-radio>
-  <div>
-    <auro-accordion>
-      <span slot="trigger">More payment options</span>
-      <auro-radio id="basicGroupRadio4" label="Click to pay" name="radioDemoA" value="manualCredit"></auro-radio>
-      <auro-radio id="basicGroupRadio5" label="Google Pay" name="radioDemoA" value="googlePay"></auro-radio>
-    </auro-accordion>
-  </div>
+  <auro-radio id="basicGroupRadio1" label="Credit or debit card" name="creditordebit" value="credit"></auro-radio>
+  <auro-radio id="basicGroupRadio2" label="Apple Pay" name="applePay" value="applePay"></auro-radio>
+  <auro-radio id="basicGroupRadio3" label="Alaska Airlines Commercial Account" name="alaskaCommercial" value="alaskaCommercial"></auro-radio>
+  <auro-accordion>
+    <span slot="trigger">More payment options</span>
+    <auro-radio id="basicGroupRadio4" label="Click to pay" name="manualCredit" value="manualCredit"></auro-radio>
+    <auro-radio id="basicGroupRadio5" label="Google Pay" name="googlePay" value="googlePay"></auro-radio>
+  </auro-accordion>
 </auro-radio-group>
