--- a/components/datepicker/src/styles/style-auro-calendar-month.scss
+++ b/components/datepicker/src/styles/style-auro-calendar-month.scss
@@ -66,10 +66,11 @@ $calendar-padding-desktop: var(--ds-size-200, $ds-size-200);
   flex: 1;
   flex-direction: row;
   justify-content: center;
-
-  font-size: var(--ds-text-heading-400-size, $ds-text-heading-400-size);
-  font-weight: var(--ds-text-heading-400-weight, $ds-text-heading-400-weight);
-  line-height: var(--ds-text-heading-400-height, $ds-text-heading-400-height);
+ 
+  font-size: var(--ds-basic-text-heading-xs-breakpoint-md-font-size, $ds-basic-text-heading-xs-breakpoint-md-font-size);
+  font-weight :var(--ds-basic-text-heading-xs-breakpoint-md-font-weight, $ds-basic-text-heading-xs-breakpoint-md-font-weight);
+  letter-spacing: var(--ds-basic-text-heading-xs-breakpoint-md-letter-spacing, $ds-basic-text-heading-xs-breakpoint-md-letter-spacing);
+  line-height: var(--ds-basic-text-heading-xs-breakpoint-md-line-height, $ds-basic-text-heading-xs-breakpoint-md-line-height);
 
   div {
     &:first-child {
