--- a/components/datepicker/src/styles/style-auro-calendar.scss
+++ b/components/datepicker/src/styles/style-auro-calendar.scss
@@ -84,7 +84,10 @@
 }
 
 .mobileDateLabel {
-  font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
+  font-size: var(--ds-basic-text-body-xs-font-size, $ds-basic-text-body-xs-font-size);
+  font-weight :var(--ds-basic-text-body-xs-font-weight, $ds-basic-text-body-xs-font-weight);
+  letter-spacing: var(--ds-basic-text-body-xs-letter-spacing, $ds-basic-text-body-xs-letter-spacing);
+  line-height: var(--ds-basic-text-body-xs-line-height, $ds-basic-text-body-xs-line-height);
 }
 
 .headerDateTo {
