--- a/components/helptext/src/styles/style.scss
+++ b/components/helptext/src/styles/style.scss
@@ -10,13 +10,18 @@
 
 .helptext-wrapper {
   display: none;
-  font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
-  line-height: var(--ds-size-200, $ds-size-200);
+  font-size: var(--ds-basic-text-body-xs-font-size, $ds-basic-text-body-xs-font-size);
+  font-weight :var(--ds-basic-text-body-xs-font-weight, $ds-basic-text-body-xs-font-weight);
+  letter-spacing: var(--ds-basic-text-body-xs-letter-spacing, $ds-basic-text-body-xs-letter-spacing);
+  line-height: var(--ds-basic-text-body-xs-line-height, $ds-basic-text-body-xs-line-height);
 }
 
 :host([large]) {
   .helptext-wrapper {
-    font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
+    font-size: var(--ds-basic-text-body-default-font-size, $ds-basic-text-body-default-font-size);
+    font-weight :var(--ds-basic-text-body-default-font-weight, $ds-basic-text-body-default-font-weight);
+    letter-spacing: var(--ds-basic-text-body-default-letter-spacing, $ds-basic-text-body-default-letter-spacing);
+    line-height: var(--ds-basic-text-body-default-line-height, $ds-basic-text-body-default-line-height);
   }
 }
 
