--- a/components/input/src/styles/mixins.scss
+++ b/components/input/src/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+
 // Handles the hidden state of the notification icons
 @mixin hidden-notification {
   overflow: hidden;
@@ -40,6 +42,9 @@
 // Handle the active state of the label
 @mixin active-label {
   top: var(--ds-size-100, $ds-size-100);
-  font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
+  font-size: var(--ds-basic-text-body-xs-font-size, $ds-basic-text-body-xs-font-size);
+  font-weight :var(--ds-basic-text-body-xs-font-weight, $ds-basic-text-body-xs-font-weight);
+  letter-spacing: var(--ds-basic-text-body-xs-letter-spacing, $ds-basic-text-body-xs-letter-spacing);
+  line-height: var(--ds-basic-text-body-xs-line-height, $ds-basic-text-body-xs-line-height);
   transform: unset;
 }
