--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -36,6 +36,18 @@
 } 
 
 :host {
+  .nativeSelectWrapper {
+    position: absolute;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    border: 0;
+    margin: -1px;
+    clip: rect(0, 0, 0, 0);
+    opacity: 0.01;
+  }
+
   [auro-dropdown] {
     position: relative;
 
