--- a/components/input/src/styles/notificationIcons.scss
+++ b/components/input/src/styles/notificationIcons.scss
@@ -2,7 +2,7 @@
 @import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 @import 'mixins';
 
-/* stylelint-disable  selector-max-attribute, max-nesting-depth, selector-max-class, selector-max-combinators, selector-max-compound-selectors */
+/* stylelint-disable  selector-max-attribute, max-nesting-depth, selector-max-class, selector-max-combinators, selector-max-compound-selectors, scss/selector-nest-combinators */
 
 .typeIcon {
   display: flex;
@@ -79,11 +79,20 @@
 }
 
 .clearBtn {
-  @include transition-animation;
-
   overflow: hidden;
   width: 0;
   opacity: 0;
+  outline-style: solid;
+  outline-width: 0;
+
+  // @include transition-animation + no transition on outline;
+  transition: all .3s cubic-bezier(.215, .61, .355, 1), outline 0ms linear;
+
+  &:focus-within,
+  &:focus:not(:focus-visible) {
+    // override wcss's core on flat button
+    outline-width: 1px;
+  }
 }
 
 :host {
