--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -3,12 +3,11 @@
 
 /* stylelint-disable max-nesting-depth */
 
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables" as v;
 
 [auro-input] {
-  min-height: var(--ds-size-700, $ds-size-700);
-  max-height: var(--ds-size-700, $ds-size-700);
+  min-height: var(--ds-size-700, #{v.$ds-size-700});
+  max-height: var(--ds-size-700, #{v.$ds-size-700});
 
   &::part(iconContainer) {
     top: 0;
