feat: add new layout for expanded search widget

--- a/components/input/apiExamples/emphasized/basic.html
+++ b/components/input/apiExamples/emphasized/basic.html
@@ -2,7 +2,7 @@
   <label slot="label">From</label>
 </auro-input> -->
 
-<auro-input id="alpha" value="lax" layout="emphasized" shape="box" size="xl" placeholder="Departure" style="width: 249px;" required>
+<auro-input id="alpha" value="lax" layout="emphasized" shape="box" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
   <span slot="helptext">Example help text</span>
   <span slot="displayValue">
@@ -13,17 +13,17 @@
   </span>
 </auro-input>
 
-<auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" required>
+<auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
   <span slot="helptext">Example help text</span>
 </auro-input>
 
-<auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" required>
+<auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
   <span slot="helptext">Example help text</span>
 </auro-input>
 
-<auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" required>
+<auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
   <span slot="helptext">Example help text</span>
 </auro-input>
