refactor: improve displayValue rendering

--- a/components/input/src/styles/color.scss
+++ b/components/input/src/styles/color.scss
@@ -19,6 +19,12 @@
     &::placeholder {
       color: var(--ds-auro-input-placeholder-text-color);
     }
+
+    &:focus {
+      &::placeholder {
+        color: var(--ds-auro-input-placeholder-text-color);
+      }
+    }
   }
 
   .displayValue {
